apps/base/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sonarr
  namespace: app-sonarr

spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: series
              mountPath: /series
      volumes:
        - name: series
          hostPath:
            path: /mnt/spike/mass-storage/videos/series
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: home.arpa/zfs-pool
                    operator: In
                    values:
                      - "true"
