apps/base/sonarr/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: app-sonarr

spec:
  ports:
    - name: http
      port: 8989
  selector:
    app: sonarr
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: app-sonarr

spec:
  entryPoints:
    - web

  routes:
    - match: HostRegexp(`^sonarr\..*`)
      kind: Rule
      services:
        - name: sonarr
          namespace: app-sonarr
          port: 8989
